--- a/homepage.html
+++ b/homepage.html
@@ -16551,181 +16551,197 @@
                                           class="atm_9s_glywfm dir dir-ltr"
                                           aria-hidden="true"
                                         >
-                                          <section class="_1l3ys1i">
-                                            <div class="_x6q4xl">
-                                              <h3 class="_otc65q">Support</h3>
+                                          <section class="footer__links">
+                                            <div
+                                              class="footer__heading-wrapper"
+                                            >
+                                              <h3 class="footer__heading">
+                                                Support
+                                              </h3>
                                             </div>
-                                            <ul class="_yuolfv">
-                                              <li class="_wmuyow">
+                                            <ul class="footer__links-list">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/help/home?from=footer"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Help Center</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/aircover"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >AirCover</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/trust"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Safety information</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/accessibility"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Supporting people with
                                                   disabilities</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/help/article/2701/extenuating-circumstances-policy-and-the-coronavirus-covid19"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Cancellation options</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/d/covidsafety"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Our COVID-19 Response</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/neighbors"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Report a neighborhood
                                                   concern</a
                                                 >
                                               </li>
                                             </ul>
                                           </section>
-                                          <section class="_1l3ys1i">
-                                            <div class="_x6q4xl">
-                                              <h3 class="_otc65q">Community</h3>
+                                          <section class="footer__links">
+                                            <div
+                                              class="footer__heading-wrapper"
+                                            >
+                                              <h3 class="footer__heading">
+                                                Community
+                                              </h3>
                                             </div>
-                                            <ul class="_yuolfv">
-                                              <li class="_wmuyow">
+                                            <ul class="footer__links-list">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="https://www.airbnb.org?locale=en"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Airbnb.org: disaster relief
                                                   housing</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   rel="noopener noreferrer"
                                                   target="_blank"
                                                   href="https://www.airbnb.org/refugees"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Support Afghan refugees</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/against-discrimination"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Combating discrimination</a
                                                 >
                                               </li>
                                             </ul>
                                           </section>
-                                          <section class="_1l3ys1i">
-                                            <div class="_x6q4xl">
-                                              <h3 class="_otc65q">Hosting</h3>
+                                          <section class="footer__links">
+                                            <div
+                                              class="footer__heading-wrapper"
+                                            >
+                                              <h3 class="footer__heading">
+                                                Hosting
+                                              </h3>
                                             </div>
-                                            <ul class="_yuolfv">
-                                              <li class="_wmuyow">
+                                            <ul class="footer__links-list">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/host/homes?from_footer=1"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Try hosting</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/aircover-for-hosts"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >AirCover for Hosts</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/resources"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Explore hosting resources</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/help/community?s=footer"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Visit our community forum</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/help/responsible-hosting"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >How to host responsibly</a
                                                 >
                                               </li>
                                             </ul>
                                           </section>
-                                          <section class="_1l3ys1i">
-                                            <div class="_x6q4xl">
-                                              <h3 class="_otc65q">Airbnb</h3>
+                                          <section class="footer__links">
+                                            <div
+                                              class="footer__heading-wrapper"
+                                            >
+                                              <h3 class="footer__heading">
+                                                Airbnb
+                                              </h3>
                                             </div>
-                                            <ul class="_yuolfv">
-                                              <li class="_wmuyow">
+                                            <ul class="footer__links-list">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/press/news"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Newsroom</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/2022-summer"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Learn about new features</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="https://news.airbnb.com/what-makes-airbnb-airbnb"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Letter from our founders</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/careers"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Careers</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="https://investors.airbnb.com"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Investors</a
                                                 >
                                               </li>
-                                              <li class="_wmuyow">
+                                              <li class="footer__links-item">
                                                 <a
                                                   href="/giftcards"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Gift cards</a
                                                 >
                                               </li>
@@ -17226,31 +17242,31 @@
                                                 dir="ltr"
                                                 >© 2022 Airbnb, Inc.</span
                                               ><span
-                                                class="_15vc6yg"
+                                                class="footer__utility-spacer"
                                                 aria-hidden="true"
                                                 >·</span
                                               ><a
                                                 href="/terms/privacy_policy"
-                                                class="_1e6wtwm5"
+                                                class="footer__link"
                                                 >Privacy</a
                                               ><span
-                                                class="_15vc6yg"
+                                                class="footer__utility-spacer"
                                                 aria-hidden="true"
                                                 >·</span
                                               ><a
                                                 href="/terms"
-                                                class="_1e6wtwm5"
+                                                class="footer__link"
                                                 >Terms</a
                                               ><span
-                                                class="_15vc6yg"
+                                                class="footer__utility-spacer"
                                                 aria-hidden="true"
                                                 >·</span
                                               ><a
                                                 href="/sitemaps/v2"
-                                                class="_1e6wtwm5"
+                                                class="footer__link"
                                                 >Sitemap</a
                                               ><span
-                                                class="_15vc6yg"
+                                                class="footer__utility-spacer"
                                                 aria-hidden="true"
                                                 >·</span
                                               ><button
