--- a/payment.html
+++ b/payment.html
@@ -1372,8 +1372,8 @@
                               </div>
                             </div>
                             <div class="c1yo0219 dir dir-ltr">
-                              <footer role="contentinfo" class="_1boqbzp">
-                                <div class="_1s94zl78">
+                              <footer role="contentinfo" class="footer">
+                                <div class="footer__container">
                                   <div class="_157uib4">
                                     <span class="a8jt5op dir dir-ltr"
                                       >Footer section</span
@@ -1432,35 +1432,39 @@
                                         </div>
                                         <div class="_pd8gea">
                                           <div class="_wjo0ey">
-                                            <div class="_1br4kkl" dir="ltr">
+                                            <div
+                                              class="footer__copyright-text"
+                                              dir="ltr"
+                                            >
                                               © 2022 Airbnb, Inc.
                                             </div>
-                                            <div class="_opoa3c">
-                                              <span class="_j8ldew"
+                                            <div class="footer__utility">
+                                              <span
+                                                class="footer__utility-spacer-wrapper"
                                                 ><span
-                                                  class="_15vc6yg"
+                                                  class="footer__utility-spacer"
                                                   aria-hidden="true"
                                                   >·</span
                                                 ></span
                                               ><a
                                                 href="/terms/privacy_policy"
-                                                class="_1e6wtwm5"
+                                                class="footer__link"
                                                 >Privacy</a
                                               ><span
-                                                class="_15vc6yg"
+                                                class="footer__utility-spacer"
                                                 aria-hidden="true"
                                                 >·</span
                                               ><a
                                                 href="/terms"
-                                                class="_1e6wtwm5"
+                                                class="footer__link"
                                                 >Terms</a
                                               ><span
-                                                class="_15vc6yg"
+                                                class="footer__utility-spacer"
                                                 aria-hidden="true"
                                                 >·</span
                                               ><a
                                                 href="/sitemaps/v2"
-                                                class="_1e6wtwm5"
+                                                class="footer__link"
                                                 >Sitemap</a
                                               >
                                             </div>
@@ -1518,13 +1522,13 @@
                                             >
                                           </div>
                                           <div class="_xh0r19">
-                                            <ul class="_115qwnm">
-                                              <li class="_kdkpwk">
+                                            <ul class="footer__social">
+                                              <li class="footer__social-item">
                                                 <a
                                                   rel="noopener noreferrer"
                                                   target="_blank"
                                                   href="https://www.facebook.com/airbnb"
-                                                  class="_1vwyakty"
+                                                  class="footer__social-link"
                                                   ><svg
                                                     viewBox="0 0 32 32"
                                                     role="img"
@@ -1545,12 +1549,12 @@
                                                   </svg>
                                                 </a>
                                               </li>
-                                              <li class="_kdkpwk">
+                                              <li class="footer__social-item">
                                                 <a
                                                   rel="noopener noreferrer"
                                                   target="_blank"
                                                   href="https://twitter.com/airbnb"
-                                                  class="_1vwyakty"
+                                                  class="footer__social-link"
                                                   ><svg
                                                     viewBox="0 0 32 32"
                                                     role="img"
@@ -1571,12 +1575,12 @@
                                                   </svg>
                                                 </a>
                                               </li>
-                                              <li class="_kdkpwk">
+                                              <li class="footer__social-item">
                                                 <a
                                                   rel="noopener noreferrer"
                                                   target="_blank"
                                                   href="https://instagram.com/airbnb"
-                                                  class="_1vwyakty"
+                                                  class="footer__social-link"
                                                   ><svg
                                                     viewBox="0 0 24 24"
                                                     role="img"
@@ -1603,35 +1607,39 @@
                                         <div class="_1sv27e6">
                                           <div class="_pd8gea">
                                             <div class="_wjo0ey">
-                                              <div class="_1br4kkl" dir="ltr">
+                                              <div
+                                                class="footer__copyright-text"
+                                                dir="ltr"
+                                              >
                                                 © 2022 Airbnb, Inc.
                                               </div>
-                                              <div class="_opoa3c">
-                                                <span class="_j8ldew"
+                                              <div class="footer__utility">
+                                                <span
+                                                  class="footer__utility-spacer-wrapper"
                                                   ><span
-                                                    class="_15vc6yg"
+                                                    class="footer__utility-spacer"
                                                     aria-hidden="true"
                                                     >·</span
                                                   ></span
                                                 ><a
                                                   href="/terms/privacy_policy"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Privacy</a
                                                 ><span
-                                                  class="_15vc6yg"
+                                                  class="footer__utility-spacer"
                                                   aria-hidden="true"
                                                   >·</span
                                                 ><a
                                                   href="/terms"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Terms</a
                                                 ><span
-                                                  class="_15vc6yg"
+                                                  class="footer__utility-spacer"
                                                   aria-hidden="true"
                                                   >·</span
                                                 ><a
                                                   href="/sitemaps/v2"
-                                                  class="_1e6wtwm5"
+                                                  class="footer__link"
                                                   >Sitemap</a
                                                 >
                                               </div>
@@ -1642,35 +1650,39 @@
                                       <div class="_ar9stc">
                                         <div class="_pd8gea">
                                           <div class="_wjo0ey">
-                                            <div class="_1br4kkl" dir="ltr">
+                                            <div
+                                              class="footer__copyright-text"
+                                              dir="ltr"
+                                            >
                                               © 2022 Airbnb, Inc.
                                             </div>
-                                            <div class="_opoa3c">
-                                              <span class="_j8ldew"
+                                            <div class="footer__utility">
+                                              <span
+                                                class="footer__utility-spacer-wrapper"
                                                 ><span
-                                                  class="_15vc6yg"
+                                                  class="footer__utility-spacer"
                                                   aria-hidden="true"
                                                   >·</span
                                                 ></span
                                               ><a
                                                 href="/terms/privacy_policy"
-                                                class="_1e6wtwm5"
+                                                class="footer__link"
                                                 >Privacy</a
                                               ><span
-                                                class="_15vc6yg"
+                                                class="footer__utility-spacer"
                                                 aria-hidden="true"
                                                 >·</span
                                               ><a
                                                 href="/terms"
-                                                class="_1e6wtwm5"
+                                                class="footer__link"
                                                 >Terms</a
                                               ><span
-                                                class="_15vc6yg"
+                                                class="footer__utility-spacer"
                                                 aria-hidden="true"
                                                 >·</span
                                               ><a
                                                 href="/sitemaps/v2"
-                                                class="_1e6wtwm5"
+                                                class="footer__link"
                                                 >Sitemap</a
                                               >
                                             </div>
@@ -1726,13 +1738,13 @@
                                             >
                                           </div>
                                           <div class="_xh0r19">
-                                            <ul class="_115qwnm">
-                                              <li class="_kdkpwk">
+                                            <ul class="footer__social">
+                                              <li class="footer__social-item">
                                                 <a
                                                   rel="noopener noreferrer"
                                                   target="_blank"
                                                   href="https://www.facebook.com/airbnb"
-                                                  class="_1vwyakty"
+                                                  class="footer__social-link"
                                                   ><svg
                                                     viewBox="0 0 32 32"
                                                     role="img"
@@ -1753,12 +1765,12 @@
                                                   </svg>
                                                 </a>
                                               </li>
-                                              <li class="_kdkpwk">
+                                              <li class="footer__social-item">
                                                 <a
                                                   rel="noopener noreferrer"
                                                   target="_blank"
                                                   href="https://twitter.com/airbnb"
-                                                  class="_1vwyakty"
+                                                  class="footer__social-link"
                                                   ><svg
                                                     viewBox="0 0 32 32"
                                                     role="img"
@@ -1779,12 +1791,12 @@
                                                   </svg>
                                                 </a>
                                               </li>
-                                              <li class="_kdkpwk">
+                                              <li class="footer__social-item">
                                                 <a
                                                   rel="noopener noreferrer"
                                                   target="_blank"
                                                   href="https://instagram.com/airbnb"
-                                                  class="_1vwyakty"
+                                                  class="footer__social-link"
                                                   ><svg
                                                     viewBox="0 0 24 24"
                                                     role="img"
