add signup_login.html?has_user_session=1 in index

--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
               <a href="signup_login.html" target="_blank">signup_login.html</a>
             </li>
             <li>
+              <a href="signup_login.html?has_user_session=1" target="_blank">signup_login.html?has_user_session=1</a>
+            </li>
+            <li>
               <a href="specific_trip.html" target="_blank"
                 >specific_trip.html</a
               >
