add search function in index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <body>
     <section>
       <div class="container grid">
+        <input
+          class="input-search"
+          type="text"
+          placeholder="Quick search..."
+          autofocus
+        />
         <div>
           <h1>Root</h1>
           <ul>
@@ -163,7 +169,9 @@
               <a href="signup_login.html" target="_blank">signup_login.html</a>
             </li>
             <li>
-              <a href="signup_login.html?has_user_session=1" target="_blank">signup_login.html?has_user_session=1</a>
+              <a href="signup_login.html?has_user_session=1" target="_blank"
+                >signup_login.html?has_user_session=1</a
+              >
             </li>
             <li>
               <a href="specific_trip.html" target="_blank"
@@ -418,5 +426,7 @@
         </div>
       </div>
     </section>
+
+    <script src="main.js" defer></script>
   </body>
 </html>
